--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,13 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header>
+    <!-- <header>
       <acme-navbar creation-date="main.creationDate"></acme-navbar>
-    </header>
-    <div class="fluid-container" ng-view></div>
+    </header> -->
+    <!-- <div style="min-height:100%;"></div> -->
+    <div id="wrap" class="fluid-container" ng-view></div>
     <footer>
-      <span>Jukebox comprehension 2016</span>
+      <span>&copy; Jukebox Comprehension 2016</span>
     </footer>
 
     <!-- build:js(src) scripts/vendor.js -->
