--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,17 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <header>
           <navbar-header></navbar-header>
         </header>
       </div>
       <div class="row">
-        <div id="wrap" ng-view></div>
+        <div ng-view></div>
       </div>
       <div class="row">
         <footer>
-          <div class="neon-font text-center neon-homepage">
-            <h1>Jukebox</h1>
-            <h1>Comprehension</h1>
-          </div>
           <span>&copy; Jukebox Comprehension 2016</span>
         </footer>
       </div>
