--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,16 @@
       </div>
       <div class="row">
         <footer>
-          <span>&copy; Jukebox Comprehension 2016</span>
+          <div class="col-sm-6">
+            <span>&copy; 2016 Jukebox Comprehension</span><br/>
+            <span>About us</span>
+            <span class="divider">&nbsp;</span>
+            <span>Terms &amp; Conditions</span>
+          </div>
+          <div class="col-sm-6">
+            <img class="pull-right" src="/assets/images/twitter.png" height="50" width="50" />
+          </div>
+
         </footer>
       </div>
     </div>
