ad missing files for style changes

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
         <footer>
           <div class="col-sm-6">
             <span>&copy; 2016 Jukebox Comprehension</span><br/>
-            <span>About us</span>
+            <a href><span>About us</span></a>
             <span class="divider">&nbsp;</span>
-            <span>Terms &amp; Conditions</span>
+            <a href><span>Terms &amp; Conditions</span></a>
           </div>
           <div class="col-sm-6">
             <img class="pull-right" src="/assets/images/twitter.png" height="50" width="50" />
