--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,15 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBQsu63PU9afHW2BWhfEZWeU4B3BTAnhvU",
+        authDomain: "jukebox-temp.firebaseapp.com",
+        databaseURL: "https://jukebox-temp.firebaseio.com",
+        storageBucket: "jukebox-temp.appspot.com",
+      };
+      firebase.initializeApp(config);
+    </script>
   </body>
 </html>
