--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,11 @@
         <footer>
           <div class="col-sm-6">
             <span>&copy; 2016 Jukebox Comprehension</span><br/>
-            <a href><span>About us</span></a>
+            <a ng-click="main.openContact()"><span>Contact-Us</span></a>
             <span class="divider">&nbsp;</span>
-            <a href><span>Terms &amp; Conditions</span></a>
+            <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
+            <span class="divider">&nbsp;</span>
+            <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
           </div>
           <div class="col-sm-6">
             <img class="pull-right" src="/assets/images/twitter.png" height="50" width="50" />
