--- a/src/index.html
+++ b/src/index.html
@@ -35,18 +35,17 @@
       </div>
       <div class="row">
         <footer>
-          <div class="col-sm-6">
-            <span>&copy; 2016 Jukebox Comprehension</span><br/>
-            <a ng-click="main.openContact()"><span>Contact-Us</span></a>
-            <span class="divider">&nbsp;</span>
+          <div class="col-sm-4">
             <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
           </div>
-          <div class="col-sm-6">
-            <img class="pull-right" src="/assets/images/twitter.png" height="50" width="50" />
+          <div class="col-sm-4 text-center">
+              <span>&copy; 2016 Jukebox Comprehension</span>
           </div>
-
+          <div class="col-sm-4">
+            <a href="https://twitter.com/jukeboxcomprehension" target="_blank"><img class="test-center pull-right" src="/assets/images/twitter.png" height="30" width="30" /></a>
+          </div>
         </footer>
       </div>
     </div>
