update home page and contact us

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
           </div>
           <div class="col-sm-4 text-center">
-              <span>&copy; 2016 Jukebox Comprehension</span>
+              <span>&copy; 2016 Jukebox Comprehension ltd</span>
           </div>
           <div class="col-sm-4">
             <a href="https://twitter.com/jukeboxcomprehension" target="_blank"><img class="test-center pull-right" src="/assets/images/twitter.png" height="30" width="30" /></a>
