--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
               <span>&copy; 2016 Jukebox Comprehension ltd</span>
           </div>
           <div class="col-sm-4">
-            <a href="https://twitter.com/jukeboxcomprehension" target="_blank"><img class="test-center pull-right" src="/assets/images/twitter.png" height="30" width="30" /></a>
+            <a href="https://twitter.com/JBComprehension" target="_blank"><img class="test-center pull-right" src="/assets/images/twitter.png" height="30" width="30" /></a>
           </div>
         </footer>
       </div>
