add new videos and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
             <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
+            <span class="divider">&nbsp;</span>
+            <a href="http://www.johnmurraycpd.co.uk/metronomics"><span>Training</span></a>
           </div>
           <div class="col-sm-4 text-center">
               <span>&copy; 2016 Jukebox Comprehension ltd</span>
