updates and tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
             <span class="divider">&nbsp;</span>
-            <a href="http://www.johnmurraycpd.co.uk/metronomics"><span>Training</span></a>
+            <a href="http://www.johnmurraycpd.co.uk/metronomics" target="_blank"><span>Training</span></a>
           </div>
           <div class="col-sm-4 text-center">
               <span>&copy; 2016 Jukebox Comprehension ltd</span>
           </div>
           <div class="col-sm-4">
-            <a href="https://twitter.com/JBComprehension" target="_blank"><img class="test-center pull-right" src="/assets/images/twitter.png" height="30" width="30" /></a>
+            <a href="https://twitter.com/JBComprehension" target="_blank"><img class="test-center pull-right twitter" src="/assets/images/twitter.png" height="30" width="30" /></a>
           </div>
         </footer>
       </div>
