tweaks and updates

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
             <span class="divider">&nbsp;</span>
-            <a href="http://www.johnmurraycpd.co.uk/metronomics" target="_blank"><span>Training</span></a>
+            <a ng-click="main.openTraining()"><span>Training</span></a>
           </div>
           <div class="col-sm-4 text-center">
               <span>&copy; 2016 Jukebox Comprehension ltd</span>
