--- a/src/index.html
+++ b/src/index.html
@@ -34,21 +34,37 @@
         <div ng-view></div>
       </div>
       <div class="row">
-        <footer>
-          <div class="col-sm-4">
+        <footer class="hidden-xs">
+          <div class="col-xs-12 col-sm-4">
             <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
             <span class="divider">&nbsp;</span>
             <a ng-click="main.openTraining()"><span>Training</span></a>
           </div>
-          <div class="col-sm-4 text-center">
+          <div class="col-xs-12 col-sm-4 text-center">
               <span>&copy; 2016 Jukebox Comprehension ltd</span>
           </div>
-          <div class="col-sm-4">
-            <a href="https://twitter.com/JBComprehension" target="_blank"><img class="test-center pull-right twitter" src="/assets/images/twitter.png" height="30" width="30" /></a>
+          <div class="col-xs-12 col-sm-4">
+            <a href="https://twitter.com/JBComprehension" target="_blank"><img class="text-center pull-right twitter" src="/assets/images/twitter.png" height="30" width="30" /></a>
           </div>
         </footer>
+        <div class="visible-xs">
+          <div class="spacer">&nbsp;</div>
+          <div class="text-center">
+            <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
+            <span class="divider">&nbsp;</span>
+            <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
+            <span class="divider">&nbsp;</span>
+            <a ng-click="main.openTraining()"><span>Training</span></a>
+          </div>
+          <div class="text-center">
+            <a href="https://twitter.com/JBComprehension" target="_blank"><img src="/assets/images/twitter.png" height="30" width="30" /></a>
+          </div>
+          <div class="text-center">
+            <span>&copy; 2016 Jukebox Comprehension ltd</span>
+          </div>
+        </div>
       </div>
     </div>
 
