add task download

--- a/src/index.html
+++ b/src/index.html
@@ -86,10 +86,11 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyBQsu63PU9afHW2BWhfEZWeU4B3BTAnhvU",
-        authDomain: "jukebox-temp.firebaseapp.com",
-        databaseURL: "https://jukebox-temp.firebaseio.com",
-        storageBucket: "jukebox-temp.appspot.com",
+        apiKey: "AIzaSyDLXQEb2hO3vl4OZyJMFk3PmQRp0NtyPNg",
+        authDomain: "jukeboxcomprehension-62881.firebaseapp.com",
+        databaseURL: "https://jukeboxcomprehension-62881.firebaseio.com",
+        storageBucket: "jukeboxcomprehension-62881.appspot.com",
+        messagingSenderId: "989332904984"
       };
       firebase.initializeApp(config);
     </script>
