--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             <a ng-click="main.openTraining()"><span>Training</span></a>
           </div>
           <div class="col-xs-12 col-sm-4 text-center">
-              <span>&copy; 2016 Jukebox Comprehension ltd</span>
+              <span>&copy; 2017 Jukebox Comprehension Ltd</span>
           </div>
           <div class="col-xs-12 col-sm-4">
             <a href="https://twitter.com/JBComprehension" target="_blank"><img class="text-center pull-right twitter" src="/assets/images/twitter.png" height="30" width="30" /></a>
@@ -62,7 +62,7 @@
             <a href="https://twitter.com/JBComprehension" target="_blank"><img src="/assets/images/twitter.png" height="30" width="30" /></a>
           </div>
           <div class="text-center">
-            <span>&copy; 2016 Jukebox Comprehension ltd</span>
+            <span>&copy; 2017 Jukebox Comprehension Ltd</span>
           </div>
         </div>
       </div>
