film brackets trim, new vids, minor tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
       <div class="row">
         <footer class="hidden-xs">
           <div class="col-xs-12 col-sm-4">
-            <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
+            <a ng-click="main.openTerms()"><span class="neon-font blue">Terms &amp; Conditions</span></a>
             <span class="divider">&nbsp;</span>
-            <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
+            <a ng-click="main.openPrivacy()"><span class="neon-font blue">Privacy</span></a>
             <span class="divider">&nbsp;</span>
-            <a ng-click="main.openTraining()"><span>Training</span></a>
+            <a ng-click="main.openTraining()"><span class="neon-font blue">Training</span></a>
           </div>
-          <div class="col-xs-12 col-sm-4 text-center">
+          <div class="col-xs-12 col-sm-4 text-center neon-font ">
               <span>&copy; 2017 Jukebox Comprehension Ltd</span>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -52,16 +52,16 @@
         <div class="visible-xs">
           <div class="spacer">&nbsp;</div>
           <div class="text-center">
-            <a ng-click="main.openTerms()"><span>Terms &amp; Conditions</span></a>
+            <a ng-click="main.openTerms()"><span class="neon-font blue">Terms &amp; Conditions</span></a>
             <span class="divider">&nbsp;</span>
-            <a ng-click="main.openPrivacy()"><span>Privacy</span></a>
+            <a ng-click="main.openPrivacy()"><span class="neon-font blue">Privacy</span></a>
             <span class="divider">&nbsp;</span>
-            <a ng-click="main.openTraining()"><span>Training</span></a>
+            <a ng-click="main.openTraining()"><span class="neon-font blue">Training</span></a>
           </div>
           <div class="text-center">
             <a href="https://twitter.com/JBComprehension" target="_blank"><img src="/assets/images/twitter.png" height="30" width="30" /></a>
           </div>
-          <div class="text-center">
+          <div class="text-center neon-font">
             <span>&copy; 2017 Jukebox Comprehension Ltd</span>
           </div>
         </div>
